Changed/removed  "free shipping…" labels; "Category" label changed to "Collection"; Fixed suffix for empty collections, it should show "0 items" with an "s"; The "Logos" should show only 4 by default; The "Socials" renamed to "Image gallery" and support 16 images added as blocks. Added some styles

--- a/sections/collection-page.liquid
+++ b/sections/collection-page.liquid
@@ -106,10 +106,10 @@
     {%- if show_amount -%}
       <div class="collection-page__top{% if full_width %} container{%- endif -%}">
         {{ counter }}
-        {% if counter > 1 %}
-          {{ counter_plural }}
-        {% else %}
+        {% if counter == 1 %}
           {{ counter_singular }}
+        {% else %}
+          {{ counter_plural }}
         {% endif %}
       </div>
     {%- endif -%}
