--- a/sections/product-page.liquid
+++ b/sections/product-page.liquid
@@ -206,8 +206,7 @@
       {
         "type": "text",
         "id": "message_label",
-        "label": "Message label",
-        "default": "Free shipping over $50"
+        "label": "Message label"
       },
       {
         "type": "color_scheme",
