--- a/sections/top-bar.liquid
+++ b/sections/top-bar.liquid
@@ -120,8 +120,7 @@
       {
         "type": "contentEditor",
         "id": "bar_message",
-        "label": "Main message",
-        "default": "Free shipping from €50"
+        "label": "Main message"
       },
       {
         "type": "header",
