--- a/snippets/collections-grid.liquid
+++ b/snippets/collections-grid.liquid
@@ -65,7 +65,7 @@
       <span class="collections__bottom">
         <span class="collections__text-area">
           <h3 class="collections__heading">
-            {{- name | default: "Category" -}}
+            {{- name | default: "Collection" -}}
           </h3>
           {%- if show_amount and collection != blank -%}
             <span class="collections__amount">
