--- a/assets/image-gallery.css
+++ b/assets/image-gallery.css
@@ -1,26 +1,26 @@
-.socials__wrapper {
+.image-gallery__wrapper {
   background: var(--background-primary);
 }
 
-.socials__wrapper--padding-top {
+.image-gallery__wrapper--padding-top {
   padding-top: var(--padding-top-mobile, 0);
 }
 
-.socials__wrapper--padding-bottom {
+.image-gallery__wrapper--padding-bottom {
   padding-bottom: var(--padding-bottom-mobile, 0);
 }
 
-.socials__title {
+.image-gallery__title {
   margin-bottom: 32px;
   text-align: center;
 }
 
-.socials__container .socials__images {
+.image-gallery__container .image-gallery__images {
   margin-right: calc(-1 * var(--horizontal-padding-mobile));
   margin-left: calc(-1 * var(--horizontal-padding-mobile));
 }
 
-.socials__images {
+.image-gallery__images {
   overflow-x: scroll;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
@@ -35,7 +35,7 @@
   gap: 8px;
 }
 
-.socials__image-wrapper {
+.image-gallery__image-wrapper {
   scroll-snap-align: start;
   scroll-snap-stop: always;
   width: 25%;
@@ -46,14 +46,14 @@
   position: relative;
 }
 
-.socials__image-wrapper img {
+.image-gallery__image-wrapper img {
   width: 100%;
   height: 100%;
   max-width: none;
   object-fit: cover;
 }
 
-.socials__link {
+.image-gallery__link {
   position: absolute;
   z-index: 1;
   top: 0;
@@ -67,25 +67,31 @@
 }
 
 @media (min-width: 992px) {
-  .socials__wrapper--padding-top {
+  .image-gallery__wrapper--padding-top {
     padding-top: var(--padding-top, 0);
   }
 
-  .socials__wrapper--padding-bottom {
+  .image-gallery__wrapper--padding-bottom {
     padding-bottom: var(--padding-bottom, 0);
   }
 
-  .socials__title {
+  .image-gallery__title {
     font-size: var(--font-size-h3);
   }
 
-  .socials__image-wrapper {
+  .image-gallery__image-wrapper {
     min-width: auto;
+    width: auto;
+  }
+
+  .image-gallery__images {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media (min-width: 1200px) {
-  .socials__container .socials__images {
+  .image-gallery__container .image-gallery__images {
     margin-right: calc(-1 * var(--horizontal-padding));
     margin-left: calc(-1 * var(--horizontal-padding));
   }
