Do not truncate hero description.

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -190,7 +190,7 @@
               {%- endif -%}
 
               {%- if description != blank -%}
-                <div class="hero__description text-medium bq-content rx-content">{{- description | truncatewords: 20, " ..." -}}</div>
+                <div class="hero__description text-medium bq-content rx-content">{{- description -}}</div>
               {%- endif -%}
 
               {%- if button_primary_label != blank or button_outline_label != blank -%}
