Change the Title inputs to plain text editors

--- a/assets/rx.css
+++ b/assets/rx.css
@@ -6,31 +6,10 @@
   list-style: decimal;
 }
 
-.bq-content.rx-content:not(.hero__title) {
+.bq-content.rx-content {
   font-family: var(--font-body);
   line-height: var(--line-height-lg);
   font-size: inherit;
-}
-
-:is(.bq-content.rx-content):is(h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6) {
-  font-family: var(--font-heading);
-  line-height: var(--line-height-xs);
-}
-
-:is(.bq-content.rx-content):is(h1, .h1, h2, .h2, h3, .h3) {
-  line-height: var(--line-height-sm);
-}
-
-:is(.bq-content.rx-content):is(h4, .h4) {
-  line-height: var(--line-height-md);
-}
-
-:is(.bq-content.rx-content):is(h5, .h5, h6, .h6) {
-  line-height: 1.4;
-}
-
-:is(.bq-content.rx-content):is(h1, .h1, h2, .h2, h3, .h3) * {
-  line-height: inherit;
 }
 
 .bq-content.rx-content h1 + *,
