--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -74,4 +74,38 @@
         --social-spacing: 9px;
     {%- endcase -%}
   }
+
+  #cc-main {
+    --cc-bg: var(--background-primary);
+    --cc-font-family: var(--font-body);
+
+    --cc-primary-color: var(--color-primary);
+    --cc-secondary-color: var(--color-primary);
+
+    --cc-btn-primary-bg: var(--background-accent);
+    --cc-btn-primary-color: var(--color-accent);
+    --cc-btn-primary-border-color: transparent;
+
+    --cc-btn-primary-hover-bg: var(--background-accent-hover);
+    --cc-btn-primary-hover-border-color: var(--background-accent-hover);
+
+    --cc-btn-secondary-bg: transparent;
+    --cc-btn-secondary-color: var(--color-primary);
+    --cc-btn-secondary-border-color: var(--background-accent);
+
+    --cc-btn-secondary-hover-bg: var(--background-accent-secondary-hover);
+    --cc-btn-secondary-hover-border-color: var(--background-accent-secondary-hover);
+    --cc-btn-secondary-hover-color: var(--color-primary);
+
+    --cc-cookie-category-block-bg: transparent;
+    --cc-cookie-category-block-hover-bg: transparent;
+
+    --cc-toggle-readonly-bg: var(--background-accent-hover);
+    --cc-toggle-readonly-knob-icon-color: var(--background-accent-hover);
+    --cc-toggle-on-bg: var(--background-accent);
+
+    .pm__section-arrow {
+      background: none !important;
+    }
+  }
 </style>
