Properly set color scheme id to cookie notice element

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,7 +44,7 @@
     <script src="{{ "search.js" | asset_url }}" defer></script>
     <script>
       window.addEventListener('cc:onModalShow', function() {
-        document.getElementById('cc-main').classList.add('color-{{ settings.cookie_notice_color_palette }}')
+        document.getElementById('cc-main').classList.add('color-{{ settings.cookie_notice_color_palette.id }}')
       })
     </script>
 
