--- a/assets/product-card.css
+++ b/assets/product-card.css
@@ -48,7 +48,7 @@
 .product-card__image:not(.focal-image) {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: var(--object-fit);
 }
 
 .product-card__meta {
