--- a/sections/collection-page.liquid
+++ b/sections/collection-page.liquid
@@ -6,6 +6,7 @@
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign full_width            = section.settings.full_width -%}
 {%- assign grid                  = section.settings.grid -%}
+{%- assign image_style           = section.settings.image_style -%}
 {%- assign image_placeholder 	   = settings.image_placeholder -%}
 {%- assign is_focal              = settings.use_focal_images -%}
 {%- assign limit                 = section.settings.limit -%}
@@ -71,6 +72,13 @@
       --padding-bottom-mobile: 40px;
     {%- when 'large' -%}
       --padding-bottom-mobile: 60px;
+  {%- endcase -%}
+
+  {%- case image_style -%}
+    {%- when 'cover' -%}
+      --object-fit: cover;
+    {%- when 'contain' -%}
+      --object-fit: contain;
   {%- endcase -%}
 
   {%- case grid -%}
@@ -197,6 +205,22 @@
         "id": "show_excerpt",
         "default": true,
         "label": "Show product description excerpt"
+      },
+      {
+        "type": "select",
+        "id": "image_style",
+        "label": "Image style",
+        "options": [
+          {
+            "value": "cover",
+            "label": "Cover"
+          },
+          {
+            "value": "contain",
+            "label": "Contain"
+          }
+        ],
+        "default": "cover"
       },
       {
         "type": "select",
