--- a/sections/collection-page.liquid
+++ b/sections/collection-page.liquid
@@ -6,7 +6,7 @@
 {%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign full_width            = section.settings.full_width -%}
 {%- assign grid                  = section.settings.grid -%}
-{%- assign image_style           = section.settings.image_style -%}
+{%- assign image_fit             = section.settings.image_fit -%}
 {%- assign image_placeholder 	   = settings.image_placeholder -%}
 {%- assign is_focal              = settings.use_focal_images -%}
 {%- assign limit                 = section.settings.limit -%}
@@ -74,7 +74,7 @@
       --padding-bottom-mobile: 60px;
   {%- endcase -%}
 
-  {%- case image_style -%}
+  {%- case image_fit -%}
     {%- when 'cover' -%}
       --object-fit: cover;
     {%- when 'contain' -%}
@@ -208,8 +208,8 @@
       },
       {
         "type": "select",
-        "id": "image_style",
-        "label": "Image style",
+        "id": "image_fit",
+        "label": "Image fit",
         "options": [
           {
             "value": "cover",
