--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -11,7 +11,7 @@
   {%- assign button_outline_url    = section.settings.button_outline_url -%}
   {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign image                 = section.settings.image -%}
-  {%- assign image_style           = section.settings.image_style -%}
+  {%- assign image_fit             = section.settings.image_fit -%}
   {%- assign image_placeholder     = settings.image_placeholder -%}
   {%- assign is_focal              = settings.use_focal_images -%}
   {%- assign padding_top           = section.settings.padding_top -%}
@@ -90,7 +90,7 @@
         --padding-bottom-mobile: 60px;
     {%- endcase -%}
 
-    {%- case image_style -%}
+    {%- case image_fit -%}
       {%- when 'cover' -%}
         --object-fit: cover;
       {%- when 'contain' -%}
@@ -265,8 +265,8 @@
       },
       {
         "type": "select",
-        "id": "image_style",
-        "label": "Image style",
+        "id": "image_fit",
+        "label": "Image fit",
         "options": [
           {
             "value": "cover",
