Make sure we send `nil` for points when it is not assigned

--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -27,7 +27,7 @@
 {%- assign image   = "" -%}
 {%- assign name    = "" -%}
 {%- assign excerpt = "" -%}
-{%- assign points  = "" -%}
+{%- assign points  = nil -%}
 {%- assign price   = "" -%}
 {%- assign period  = "" -%}
 
