--- a/sections/products.liquid
+++ b/sections/products.liquid
@@ -13,7 +13,6 @@
   {%- assign image                 = section.settings.image -%}
   {%- assign image_fit             = section.settings.image_fit -%}
   {%- assign image_placeholder     = settings.image_placeholder -%}
-  {%- assign is_focal              = settings.use_focal_images -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -26,6 +25,10 @@
   {%- assign tag_image             = section.settings.tag_image -%}
   {%- assign timer                 = section.settings.timer -%}
   {%- assign title                 = section.settings.title -%}
+  {% assign is_focal = false %}
+  {% if settings.use_focal_images and image_fit == 'cover' %}
+    {% assign is_focal = true %}
+  {% endif %}
 
   {%- if collection != blank -%}
     {%- assign items = collection.items -%}
