--- a/sections/search.liquid
+++ b/sections/search.liquid
@@ -9,7 +9,6 @@
 {%- assign grid                  = section.settings.grid -%}
 {%- assign image_fit             = section.settings.image_fit -%}
 {%- assign image_placeholder     = settings.image_placeholder -%}
-{%- assign is_focal              = settings.use_focal_images -%}
 {%- assign limit                 = section.settings.limit -%}
 {%- assign menu                  = false -%}
 {%- assign message               = section.settings.message -%}
@@ -24,6 +23,10 @@
 {%- assign show_pagination       = section.settings.show_pagination -%}
 {%- assign timer                 = section.settings.timer -%}
 {%- assign sticky_sidebar        = section.settings.sticky_sidebar -%}
+{% assign is_focal = false %}
+{% if settings.use_focal_images and image_fit == 'cover' %}
+  {% assign is_focal = true %}
+{% endif %}
 
 {%- for block in section.blocks -%}
   {%- assign menu = block.settings.menu -%}
