Add missing cart color variables

--- a/snippets/variables-mini-cart.liquid
+++ b/snippets/variables-mini-cart.liquid
@@ -1,6 +1,8 @@
 {% style %}
   [data-tid="Mini cart"] {
     --minicart-accent-color: var(--background-accent);
+    --minicart-accent-outline: var(--color-outline);
+    --minicart-accent-text-color: var(--color-accent);
     --minicart-background-color: var(--background-primary);
     --minicart-typo-color: var(--color-primary);
     --minicart-header-color: var(--color-accent);
