--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -152,27 +152,6 @@
 }
 
 @media (min-width: 992px) {
-  .carousel:before,
-  .carousel:after {
-    content: "";
-    position: absolute;
-    right: calc(100% - 10px);
-    top: 0;
-    bottom: 0;
-    width: calc(46px + var(--horizontal-padding-mobile));
-    z-index: 1;
-    background: linear-gradient(90deg, var(--background-primary) 42.92%, var(--background-primary-00) 95%);
-  }
-
-  .carousel:after {
-    background: linear-gradient(-90deg, var(--background-primary) 42.92%, var(--background-primary-00) 95%);
-  }
-
-  .carousel::after {
-    right: auto;
-    left: calc(100% - 10px);
-  }
-
   .carousel__wrapper {
     margin: 0 -16px;
     width: calc(100% + 32px);
@@ -188,17 +167,25 @@
 }
 
 @media (min-width: 1200px) {
-  .carousel:before,
-  .carousel::after {
-    right: calc(100% - 17px);
-    width: calc(46px + var(--horizontal-padding));
-    background: linear-gradient(90deg, var(--background-primary) 58%, var(--background-primary-00) 95%);
+  .carousel__wrapper {
+    margin: 0;
+    width: 100%;
   }
 
-  .carousel::after {
-    right: auto;
-    left: calc(100% - 17px);
-    background: linear-gradient(-90deg, var(--background-primary) 58%, var(--background-primary-00) 95%);
+  .carousel__item {
+    min-width: var(--slide-width);
+  }
+
+  .carousel__item:last-child {
+    min-width: calc(var(--slide-width) - 16px);
+  }
+
+  .carousel__inner {
+    padding: 0 16px 0 0;
+  }
+
+  .carousel__item:last-child .carousel__inner {
+    padding: 0;
   }
 }
 
