Use checkout specific header content

--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -7,7 +7,7 @@
 
     {% comment %} Fonts {% endcomment %}
     <script src="https://kit.fontawesome.com/ff3b3de2b5.js" crossorigin="anonymous"></script>
-    {{ content_for_header }}
+    {{ content_for_checkout_header }}
 
     {% render 'fonts', settings: settings %}
 
