--- a/sections/call-to-action.liquid
+++ b/sections/call-to-action.liquid
@@ -379,7 +379,8 @@
       {
         "type": "url",
         "id": "button_primary_url",
-        "label": "Button link"
+        "label": "Button link",
+        "default": "booqable://root"
       },
       {
         "type": "header",
