--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -428,7 +428,7 @@
         "type": "checkbox",
         "id": "show_transition_top",
         "label": "Show top transition",
-        "default": true
+        "default": false
       },
       {
         "type": "color",
@@ -446,7 +446,7 @@
         "type": "color",
         "id": "transition_color_bottom",
         "label": "Bottom transition color",
-        "default": "#000000"
+        "default": "#FFFFFF"
       },
       {
         "type": "header",
@@ -462,7 +462,8 @@
       {
         "type": "url",
         "id": "button_primary_url",
-        "label": "Button 1 link"
+        "label": "Button 1 link",
+        "default": "booqable://root"
       },
       {
         "type": "text",
@@ -474,7 +475,8 @@
       {
         "type": "url",
         "id": "button_outline_url",
-        "label": "Button 2 link"
+        "label": "Button 2 link",
+        "default": "booqable://root"
       },
       {
         "type": "header",
