--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -206,12 +206,14 @@
           {
             "type": "text",
             "id": "button_label",
-            "label": "Button label"
+            "label": "Button label",
+            "default": "Button"
           },
           {
             "type": "url",
             "id": "button_url",
-            "label": "Button link"
+            "label": "Button link",
+            "default": "booqable://root"
           },
           {
             "type": "select",
