Added some defaults and fixed errors in schema

--- a/sections/articles.liquid
+++ b/sections/articles.liquid
@@ -475,7 +475,8 @@
           {
             "type": "url",
             "id": "article_btn_url",
-            "label": "Button link"
+            "label": "Button link",
+            "default": "booqable://root"
           }
         ]
       }
