--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -373,7 +373,8 @@
           {
             "type": "image_picker",
             "id": "image",
-            "label": "Picture"
+            "label": "Picture",
+            "default": "booqable://assets/image-avatar-1.png"
           },
           {
             "type": "text",
