--- a/sections/title.liquid
+++ b/sections/title.liquid
@@ -161,7 +161,7 @@
         "type": "text",
         "id": "custom_title",
         "label": "Custom title",
-        "default": "Products"
+        "default": "Title"
       },
       {
         "type": "contentEditor",
